# 2048-Game

./: CMakeLists.txt  New Text Document.txt  README.md  game 2048.cpp  main.cpp
src/: Board.cpp  game2048.cpp  gamewindow.cpp  gamewindow.h  leaderboard.cpp  leaderboard.h  mainmenu.cpp  mainmenu.h  pausemenu.cpp  pausemenu.h
src/include/: Board.h  game2048.h
ui/: mainmenu.ui
